# OpenPCDet-Mark-thesis

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
data/: kitti
data/dataset-template/ImageSets/: write_train.py
data/wayside-gt-dataset-lidar1/: training
docs/: GETTING_STARTED.md
nuscenes-preprocessing/: analyze_object_movement.py  analyze_point_density.py  analyze_point_intensity.py  filter_kitti_labels_within_fov.py  gen_default_rois.py  gen_ground_planes.py  gen_train_val_split_groups.py  kitti.py  link_modest_to_wayside.py  link_wayside_indexed_dataset.py  merge_modest_wayside_labels.py  nusc2kitti_boston.py  nusc_to_wayside_pcds.py  unify_label_class.py
nuscenes-preprocessing/params/: train.txt  train_val.txt  val.txt
pcdet/models/: __init__.py
pcdet/utils/: common_utils.py
tools/: add_two_training_cfg.py  add_two_training_cfg_centerpoint.py  add_two_training_cfg_pointrcnn.py  demo.py  eval_from_file.py  test.py  test_self_training.py  train.py
tools/eval_utils/: eval_utils.py
tools/scripts/: analyze_dataset.py  append_calib_velodyne_links.py  append_device_id.py  continue_self_training.sh  eval_self_training.sh  gen_pcd_index_map.py  link_data_subset.py  link_pcd_files.py  reindex_annotations.py  revise_json.py  self_training.sh  self_training_centerpoint.sh  self_training_centerpoint_round_i.sh  self_training_nusc.sh  self_training_nusc_round_i.sh  self_training_pointrcnn.sh  self_training_pointrcnn_round_i.sh  self_training_round_i.sh  write_index_file.py
tools/visual_utils/: open3d_vis_utils.py
(+227 files in other folders)
