[tool.poetry]
name = "openpcdet-mark-thesis"
version = "0.1.0"
description = ""
authors = ["mark <yahoo55025502@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "^1.21.1"
json5 = "^0.9.5"
pccm = ">=0.2.21"
setuptools = ">=41.0"
llvmlite = "^0.39.1"
numba = "^0.56.4"
tensorboardX = "^2.6"
easydict = "^1.10"
scikit-image = "^0.18.3"
SharedArray = "^3.2.2"
spconv-cu113 = "^2.1.19"
pandas = "^1.3.2"
tqdm = "^4.62.2"
opencv-python = "^4.5.4"
logzero = "^1.7.0"
pyyaml = "^6.0.1"
opencv-python-headless = "^4.8.1.78"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
